# wafmcp

./: README.md  opencode.json  pyproject.toml
tests/: smoke_live.py  test_api_testing.py  test_browser.py  test_cli.py  test_core.py  test_endpoints_oracles.py  test_graphql.py  test_header_injection.py  test_interference.py  test_json_arg.py  test_jwt.py  test_logic_flaws.py  test_methods_and_capture.py  test_oracles_live.py  test_origin.py  test_passive.py  test_race.py  test_recon.py  test_report.py  test_rules.py  test_takeover.py  test_wayback.py  test_xss.py
wafmcp/: __init__.py  api_testing.py  browser.py  cli.py  endpoints.py  graphql_audit.py  http_client.py  identities.py  jwt_audit.py  logic_flaws.py  methods.py  mutate.py  oast.py  origin.py  passive.py  race.py  recon.py  report.py  rules.py  scope.py  server.py  takeover.py  verify.py  waf.py  wayback.py  xss.py
